<resources>
    <string name="app_name">OpenCBT</string>
    <string name="action_newrecord">Новая запись</string>
    <string name="action_ordering">Поменять порядок записей</string>
    <string name="action_settings">Настройки</string>
    <string name="action_html">Отправить дневник</string>
    <string name="action_statistics">Статистика</string>
    <string name="action_about">О приложении</string>
    <string name="action_help">Справка</string>
    <string name="newrecord_text_situation">Ситуация при которой возникла мысль</string>
    <string name="newrecord_text_thought">Ваша автоматическая мысль</string>
    <string name="newrecord_text_rational">Ваш рациональный ответ</string>
    <string name="newrecord_text_emotions">Ваши эмоции (что Вы чувствуете?)</string>
    <string name="newrecord_text_intensity">Отметьте уровень дискомфорта </string>
    <string name="newrecord_text_distortions">Отметьте искажения</string>
    <string name="newrecord_text_feelings">Телесные ощущения</string>
    <string name="newrecord_text_actions">Предпринятые действия</string>
    <string name="newrecord_button_add">Сохранить</string>
    <string name="newrecord_button_delete">Удалить</string>
    <string name="adapter_situation">Ситуация: %1$s</string>
    <string name="adapter_thought">Мысль: %1$s</string>
    <string name="adapter_distortions">Искажения: %1$s</string>
    <string name="adapter_emotions">Эмоции: %1$s</string>
    <string name="adapter_feelsing">Ощущения: %1$s</string>
    <string name="adapter_actions">Действия: %1$s</string>
    <string name="adapter_disput">Ответ: %1$s</string>
    <string name="adapter_intensity">Дискомфорт: <b>%1$d%%</b></string>
    <string name="adapter_empty">Вы создали пустую запись. Хотите продолжить заполнение?</string>
    <string name="newrecord_text_emptysituation">Поле \"Ситуация\" не заполнено</string>
    <string name="newrecord_text_emptydisput">Поле \"Рациональный ответ\" не заполнено</string>
    <string name="newrecord_text_emptyemotion">Поле \"Эмоции\" не заполнено</string>
    <string name="newrecord_text_emptydistortion">Когнитивные искажения не отмечены</string>
    <string name="dist_all_or_nothing">Всё или ничего</string>
    <string name="dist_overgeneralizing">Сверхобобщение</string>
    <string name="dist_filtering">Негативный фильтр</string>
    <string name="dist_disqual_positive">Обесценивание положительного</string>
    <string name="dist_jump_conclusion">Поспешные выводы</string>
    <string name="dist_magn_and_min">Преувеличение и преуменьшение</string>
    <string name="dist_emotional_reasoning">Эмоциональное обоснование</string>
    <string name="dist_must_statement">Долженствования</string>
    <string name="dist_labeling">Ярлыки</string>
    <string name="dist_personalistion">Персонализация</string>
    <string name="dist_empty">Не заполнено</string>
    <string name="newrecord_toast_empty">Поле для автоматической мысли обязательно для заполнения</string>
    <string name="main_text_welcome">Дневник автоматических мыслей — эффективная техника из
        когнитивно-поведенческой психотерапии. С его помощью Вы научитесь находить у себя огорчающие
    мысли, определять искажения в них и сможете заменить их более адаптивными. \n
        С идеями, лежащими в основе этого метода, Вы можете ознакомиться в книгах Дэвида Бернса, Мэтью Маккея и других специалистов в области КПТ.\n
        В настройках можно выбрать, что именно Вы хотите записывать в дневник.\n

        Для того чтобы записать первую мысль, нажмите на кнопку в углу экрана.</string>
    <string name="about">Android OpenCBT — свободное и бесплатное приложение для ведения дневника автоматических мыслей
    из когнитивно-поведенческой терапии.\nЕго можно использовать для саморазвития, а также для облегчения симптомов тревоги или депрессии. Приложение не имеет доступа к Вашей телефонной книге и файлам, хранящимся в телефоне.\nЕсли Вы столкнулись с проблемой или неправильной работой приложения, пожалуйста, сообщите об этом нам, и мы постараемся это исправить.</string>
    <string name="about_button_send">Сообщить о проблеме</string>
    <string name="about_button_website">Сайт приложения</string>
    <string name="about_button_cbt">Узнать больше о КПТ</string>
    <string name="about_button_versions">Все версии</string>
    <string name="title_about">О приложении</string>
    <string name="title_newrecord">Запись в дневник</string>
    <string name="app_author">Виктор Вяличкин, Василий Тепловодский\n2022\nВерсия: %1$s (%2$s)</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_columns">Что записываем в дневник? (предлагается заполнить для новых записей)</string>
    <string name="pref_thoughts">Автоматические мысли</string>
    <string name="pref_disput">Рациональный ответ</string>
    <string name="pref_situation">Ситуация</string>
    <string name="pref_emotions">Эмоции</string>
    <string name="pref_feelings">Телесные ощущения</string>
    <string name="pref_actions">Действия</string>
    <string name="pref_intensity">Уровень дискомфорта</string>
    <string name="pref_distortions">Когнитивные искажения</string>
    <string name="pref_empty">Должно быть выбрано хотя бы одно поле для записи в дневник</string>
    <string name="pref_quotes">Мысль в кавычках</string>
    <string name="pref_percents">Проценты всегда</string>
    <string name="pref_pin_problem">Для использования этой функции, необходимо чтобы в настройках телефона была включена блокировка экрана. Открыть настройки телефона?</string>
    <string name="pref_pin_title">Защита входа</string>
    <string name="pref_summ_percents">Уровень дискомфорта как в v0.3</string>
    <string name="pref_discretpercents">Деления ползунка</string>
    <string name="pref_descret_step">Шаг ползунка</string>
    <string name="pref_color_intensity">Цвет дискомфорта</string>
    <string name="pref_summ_discretpercents">Будет работать в новых записях</string>
    <string name="pref_dividers">Показывать разделители</string>
    <string name="savehtml_welcome">Вы можете отправить свой дневник на электронную почту или в мессенджер, например, для того, чтобы передать его специалисту.
        Дневник будет оформлен в виде таблицы.\nБудьте внимательны, когда выбираете, куда Вы хотите отправить свои записи.</string>
    <string name="savehtml_button_save">Отправить дневник</string>
    <string name="savehtml_button_send">Отправить по почте</string>
    <string name="savehtml_text_startdate">Начало периода:</string>
    <string name="savehtml_text_enddate">Конец периода:</string>
    <string name="savehtml_text_alldiary">Дневник полностью</string>
    <string name="savehtml_text_share">Выберите приложение, через которое хотите отправить дневник:</string>
    <string name="savehtml_error">Не удалось отправить дневник.</string>
    <string name="dialog_help_text">
        <b>Cитуация.</b>
Опишите обстоятельства, при которых возникла автоматическая мысль или появился дискомфорт.\n

<b>Автоматические мысли.</b>
Иррациональные пугающие, обесценивающие и огорчающие мысли, которые проносятся у Вас в голове, когда Вы расстроены или встревожены. Например, \"Я неудачник\", \"У меня все не так как у людей\", \"Все относятся ко мне, как к пустому месту\", \"Я этого не переживу\".\n

<b>Ваши эмоции.</b>
Опишите, что Вы почувствовали. Например: тревога, грусть, злость, волнение.\n

<b>Уровень дискомфорта.</b>
С помощью ползунка оцените уровень неприятных ощущений от 0 до 100.\n

<b>Телесные ощущения.</b>
Что Вы чувствовали в теле? Тошноту, головокружение, боль, слабость?\n

<b>Предпринятые действия.</b>
Опишите, что Вы сделали в этот момент или сразу после.\n

<b>Рациональный ответ.</b>
Дайте отпор автоматическим мыслям. Замените их на более рациональные и правдоподобные.
Например, в ответ на мысль \"У меня всегда всё не так\", Вы можете сказать себе \"Всё не может быть не так. У меня, по крайней мере, иногда все получается хорошо\".\n

<b>Когнитивные искажения.</b>
Когнитивные искажения - это шаблоны мышления, приводящие к возникновению или усилению депрессивных и тревожных состояний.\n
        <b>Всё или ничего.</b> \"Черно-белое\" мышление. Все может быть либо абсолютно плохим, либо абсолютно хорошим.\n
<b>Сверхобобщение.</b> Единственное негативное событие приводит к далеко идущим выводам, распространяемым на всю жизнь.\n
<b>Негативный фильтр.</b> Фиксация исключительно на негативных событиях, игнорируются положительные и нейтральные.\n
<b>Обесценивание положительного.</b> Негативная трактовка даже положительных событий.\n
<b>Поспешные выводы.</b> Склонность делать выводы о будущем или мыслях других людей, не основываясь на фактах.\n
<b>Преувеличение и преуменьшение.</b> Склонность преувеличивать собственные ошибки, страхи, недостатки и преуменьшать свои положительные стороны и достижения.\n
<b>Эмоциональное обоснование.</b> Предположение, что эмоции отражают истинный характер вещей. \"Я чувствую себя ничтожеством, значит так оно и есть\"\n
<b>Долженствования.</b> Утверждения со словом \"должен\" или \"надо\". Мышление в этом стиле приводит к гневу и разочарованию, когда реальность не оправдывает Ваши ожидания.\n
<b>Ярлыки.</b> Навешивание на себя или окружающих ярлыков (часто оскорбительных, вроде \"Я неудачник\", \"Я идиот\"). Такой стиль мышления распространяет единичные ошибки на всю Вашу суть.\n
<b>Персонализация.</b> Склонность принимать на себя ответственность за эмоции, чувства и поведение других людей. Вы переоцениваете свое влияние на окружающих, что может приводить к чувству вины.\n
        <i>Более подробно с когнитивными искажениями можно ознакомиться в книгах Дэвида Бернса, Мэтью Маккея, работах Аарона Бека.</i>
    </string>
    <string name="stat_application">Статистика использования:</string>
    <string name="stat_total">Всего записей:</string>
    <string name="stat_old">Самая старая:</string>
    <string name="stat_latest">Самая свежая:</string>
    <string name="stat_psy">Психология</string>
    <string name="stat_distortions">Когнитивные искажения:</string>
    <string name="stat_emptydiary">Дневник пока еще пуст. Начните вести его, прежде чем смотреть статистику</string>
    <string name="stat_intesity">Средний уровень дискомфорта: </string>
    <string name="add_new_record">Add new record</string>
    <string name="stat_night">Добавлены ночью (0–6):</string>
    <string name="stat_morning">Добавлены утром (6–12):</string>
    <string name="stat_day">Добавлены днем (12–18):</string>
    <string name="stat_evening">Добавлены вечером (18–24):</string>
    <string name="title_export_to">Экспорт дневника</string>
    <string name="import_records">Импортировать записи</string>
    <string name="export_html">HTML</string>
    <string name="export_json">JSON</string>
    <string name="export_text_format">Формат:</string>
    <string name="savejson_welcome">Вы можете отправить резервную копию своего дневника на электронную почту или в мессенджер,
        например, для того, чтобы сохранить его у себя на компьютере и восстановить в дальнейшем на этом или другом устройстве.
        Дневник будет сохранен в формате JSON.\nБудьте внимательны, когда выбираете, куда Вы хотите отправить свои записи.</string>
    <string name="pin_back">Нажмите еще раз для выхода</string>
    <string name="import_error_readfile">Ошибки при чтении файла</string>
    <string name="import_nodata">Нет данных для импорта</string>
    <plurals name="import_cancel">
        <item quantity="one">Импортирована %d запись</item>
        <item quantity="few">Импортировано %d записи</item>
        <item quantity="other">Импортировано %d записей</item>
    </plurals>
    <string name="cancel">Отмена</string>
    <string name="details_fragment_confirm_dialog_title">Отменить изменения?</string>
    <string name="details_fragment_confirm_dialog_message">Были внесены изменения. Выйти?</string>
    <string name="save">Сохранить</string>
    <string name="settings_category_help">Помощь</string>
</resources>