<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory app:title="Настройки отображения"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="desc_ordering"
            app:title="Сначала новые записи"/>

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_quotes"
            app:iconSpaceReserved="false"
            app:title="@string/pref_quotes"/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enable_percents"
            app:dependency="enable_intensity"
            app:summary="@string/pref_summ_percents"
            app:iconSpaceReserved="false"
            app:title="@string/pref_percents"/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enable_night_theme"
            app:iconSpaceReserved="false"
            app:title="Ночная тема" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enable_intensity_indication"
            app:iconSpaceReserved="false"
            app:title="Индикация интенсивности на главном экране" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_dividers"
            app:iconSpaceReserved="false"
            app:title="@string/pref_dividers"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_columns"
        app:iconSpaceReserved="false"
        app:initialExpandedChildrenCount="0">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_situation"
            app:iconSpaceReserved="false"
            app:title="@string/pref_situation" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_thoughts"
            app:iconSpaceReserved="false"
            app:title="@string/pref_thoughts" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_emotions"
            app:iconSpaceReserved="false"
            app:title="@string/pref_emotions" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_intensity"
            app:iconSpaceReserved="false"
            app:title="@string/pref_intensity" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="enable_feelings"
            app:title="@string/pref_feelings" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_actions"
            app:iconSpaceReserved="false"
            app:title="@string/pref_actions" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_distortions"
            app:iconSpaceReserved="false"
            app:title="@string/pref_distortions" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_rational"
            app:iconSpaceReserved="false"
            app:title="@string/pref_disput" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Резервное копирование" >
        <ListPreference
            app:key="default_export"
            app:iconSpaceReserved="false"
            app:entries="@array/export_settings_entries"
            app:entryValues="@array/export_settings_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="HTML"
            app:title="Формат по умолчанию" />
        <Preference
            app:title="Выгрузить записи локально"
            app:iconSpaceReserved="false"
            app:key="setting_export_local" />
        <Preference
            app:title="Загрузить записи локально"
            app:iconSpaceReserved="false"
            app:key="setting_import_local" />
        <com.vva.androidopencbt.settings.widgets.SwitchProgressPreference
            app:defaultValue="false"
            app:key="enable_gdrive_integration"
            app:iconSpaceReserved="false"
            app:title="Включить интеграцию" />
        <Preference
            app:title="Выгрузить записи в GDrive"
            app:iconSpaceReserved="false"
            app:key="setting_export_gdrive"
            app:dependency="enable_gdrive_integration" />
        <Preference
            app:title="Загрузить записи из GDrive"
            app:iconSpaceReserved="false"
            app:key="setting_import_gdrive"
            app:dependency="enable_gdrive_integration" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Защита входа"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="enable_pin_protection"
            app:title="Включить защиту входа" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_category_help"
        app:iconSpaceReserved="false">
        <Preference
            app:title="@string/action_about"
            app:key="setting_about"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
