<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nr_situationTextView"
            android:text="@string/newrecord_text_situation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/situationEditText"
            android:lines="2"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:onClick="setEditText"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nr_thoughtTextView"
            android:text="@string/newrecord_text_thought"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thoughtEditText"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:onClick="setEditText"
            android:lines="2"
            android:gravity="top"
            android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nr_emotionTextView"
                android:text="@string/newrecord_text_emotions"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emotionEditText"
                android:focusable="false"
                android:longClickable="false"
                android:cursorVisible="false"
                android:onClick="setEditText"
                android:lines="1"
                android:gravity="top"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nr_intensityTextView"
                android:text="@string/newrecord_text_intensity"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intensitySeekBar"
                android:max="100"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="0%"
                android:id="@+id/percentsTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nr_feelingsTextView"
                android:text="@string/newrecord_text_feelings"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feelingsEditText"
                android:focusable="false"
                android:longClickable="false"
                android:cursorVisible="false"
                android:onClick="setEditText"
                android:lines="1"
                android:gravity="top"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nr_actionsTextView"
                android:text="@string/newrecord_text_actions"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/actionsEditText"
                android:focusable="false"
                android:longClickable="false"
                android:cursorVisible="false"
                android:onClick="setEditText"
                android:lines="1"
                android:gravity="top"
                android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nr_rationalTextView"
            android:text="@string/newrecord_text_rational"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rationalEditText"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:onClick="setEditText"
            android:lines="2"
            android:gravity="top"
            android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nr_distortionTextView"
                android:text="@string/newrecord_text_distortions"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allOrNothingCheckBox"
                android:text="@string/dist_all_or_nothing"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/overgeneralizingCheckBox"
                android:text="@string/dist_overgeneralizing"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filteringCheckBox"
                android:text="@string/dist_filtering"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/disqualCheckBox"
                android:text="@string/dist_disqual_positive"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jumpCheckBox"
                android:text="@string/dist_jump_conclusion"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/magnMinCheckBox"
                android:text="@string/dist_magn_and_min"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emoReasonCheckBox"
                android:text="@string/dist_emotional_reasoning"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mustCheckBox"
                android:text="@string/dist_must_statement"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelingCheckBox"
                android:text="@string/dist_labeling"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personCheckBox"
                android:text="@string/dist_personalistion"/>

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:textColor="#FFFFFF"
        android:text="@string/newrecord_button_add"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:onClick="delete"
        android:visibility="gone"
        android:textColor="#FFFFFF"
        android:text="@string/newrecord_button_delete"/>

</LinearLayout>