<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/rvFragment">
    <fragment
        android:id="@+id/rvFragment"
        android:name="com.vva.androidopencbt.recordslist.RvFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_rvFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_rvFragment_to_statisticFragment"
            app:destination="@id/statisticFragment" />
        <action
            android:id="@+id/action_rvFragment_to_settingsActivity"
            app:destination="@id/settingsActivity" />
        <action
            android:id="@+id/action_rvFragment_to_exportToHtmlFragment"
            app:destination="@id/exportToHtmlFragment" />
        <action
            android:id="@+id/action_rvFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.vva.androidopencbt.AboutFragment"
        android:label="@string/title_about" />
    <fragment
        android:id="@+id/statisticFragment"
        android:name="com.vva.androidopencbt.statistic.StatisticFragment"
        android:label="@string/action_statistics"
        tools:layout="@layout/fragment_statistic" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.vva.androidopencbt.SettingsActivity"
        android:label="@string/title_activity_settings" />
    <fragment
        android:id="@+id/exportToHtmlFragment"
        android:name="com.vva.androidopencbt.export.html.ExportToHtmlFragment"
        android:label="ExportToHtmlFragment" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.vva.androidopencbt.recorddetails.DetailsFragment"
        android:label="@string/title_newrecord" >
        <argument
            android:name="recordKey"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>